background-color by parameter

--- a/projects/adv-stories/src/lib/adv-stories.component.html
+++ b/projects/adv-stories/src/lib/adv-stories.component.html
@@ -1,4 +1,5 @@
-<div class="insta-stories" [ngClass]="{'hide': hideStories}">
+
+<div class="insta-stories" [ngClass]="{'hide': hideStories}" [ngStyle]="{'background-color': background_color}"  >
   <div class="pointers">
     <div class="wrap">
 
