--- a/projects/adv-stories/src/lib/adv-stories.component.css
+++ b/projects/adv-stories/src/lib/adv-stories.component.css
@@ -16,6 +16,7 @@
     }
   }
 
+
 .insta-stories {
     position: absolute;
     top: 0;
@@ -28,7 +29,7 @@
     justify-content: center;
     align-content: center;
 
-    background: #191919;
+    /* background-color: rgba(19, 32, 152, 0.85); */
 
     height: 100vh;
     width: 100vw;
